# vagd

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  template.py  vagd.py  vtemplate.py
.github/workflows/: docs_sphinx_pages.yml  sphinx_docs_pages.yml
docs/: Makefile  buildDocs.sh  conf.py  index.rst  requirements.txt  vagd.rst  vagd.virts.rst
docs/source/: modules.rst  vagd.rst
src/vagd/: __init__.py  __main__.py  box.py  cli.py  gdb.py  gdb_wrapper.py  helper.py  pwngd.py  template.txt  templates.py  vtemplate.py  wrapper.py
src/vagd/gdb/: __init__.pyi
src/vagd/res/: aliases.txt  local_template.txt  seccomp.json  template.txt
src/vagd/virts/: __init__.py  cogd.py  dogd.py  logd.py  pogd.py  pwngd.py  qegd.py  shgd.py  vagd.py
test/: run.sh  sysinfo.c  test.py  vagd
