[project]
name = "vagd"
version = "0.1.3"
authors = [
  { name="0x6fe1be2", email="author@example.com" },
]
description = "pwntools with vagrant integration"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[build-system]
requires = ["setuptools", "wheel", "pwntools", "python-vagrant"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vagd.gdb" = ["*.pyi"]


[project.urls]
"Homepage" = "https://github.com/gfelber/vagd"
"Bug Tracker" = "https://github.com/gfelber/vagd/issues"