[project]
name = "vagd"
version = "0.4.7"
authors = [
  { name="0x6fe1be2", email="author@example.com" },
]
description = "VirtuAlization GDb integrations in pwntools"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['pwntools', 'python-vagrant', 'docker']
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]

[build-system]
requires = ["setuptools", "wheel", "pwntools", "python-vagrant", "docker"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vagd.res" = ["template.txt", "seccomp.json"]
"vagd.gdb" = ["*.pyi"]


[project.urls]
"Homepage" = "https://github.com/gfelber/vagd"
"Documentation" = "https://gfelber.github.io/vagd/"
"Bug Tracker" = "https://github.com/gfelber/vagd/issues"
