[project]
name = "vagd"
version = "1.5.5"
authors = [{ name = "0x6fe1be2" }]
description = "VirtuAlization GDb integrations in pwntools"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['pwntools', 'docker', 'typer', 'rich']
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
keywords = [
  'vagd',
  'pwn',
  'pwntools',
  'exploit',
  'ctf',
  'capture',
  'the',
  'flag',
  'binary',
  'vagrant',
  'qemu',
  'docker',
]

[project.scripts]
vagd = "vagd:cli.start"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"vagd.res" = [
  "template.txt",
  "seccomp.json",
  "local_template.txt",
  "aliases.txt",
]
"vagd.gdb" = ["*.pyi"]


[project.urls]
"Homepage" = "https://github.com/gfelber/vagd"
"Documentation" = "https://gfelber.github.io/vagd/"
"Bug Tracker" = "https://github.com/gfelber/vagd/issues"
